# cmake-custom-generator-example

./: CMakeLists.txt  CaptainKirk.speak  Hercule.speak  LongFeng.speak  README.md
as-a-macro/: CMakeLists.txt  main.cpp
list-and-destination-variable-name/: CMakeLists.txt  main.cpp
super-simple/: CMakeLists.txt  main.cpp
tools/: speakerGenerator.sh
tools/o/: Hercule.cpp  Hercule.h
